--- a/po/nl.po
+++ b/po/nl.po
@@ -2808,7 +2808,7 @@ msgid "Delay in miliseconds between scrolling characters on display."
 msgstr "De onderlinge vertraging in msec tussen de scrollende karakters op het display."
 
 msgid "Delay when closing a stream relay service before reallocating the tuner for another service. Using '0' is only recommended for boxes with multiple satellite tuners."
-msgstr "Vertraging bij het verlaten van een streamrelay-zender alvorens de tuner opnieuw wordt toegewezen aan een gewone zender. Het gebruik van '0' wordt alleen aanbevolen voor ontvangers met meerdere satelliettuners."
+msgstr "Vertragingstijd bij het schakelen van een streamrelay-zender naar een normale zender. Het gebruik van '0' wordt alleen aanbevolen voor ontvangers met meerdere satelliettuners."
 
 msgid "Delete"
 msgstr "Verwijderen"
@@ -9045,6 +9045,9 @@ msgstr "Opgeslagen positie"
 
 msgid "Stream"
 msgstr "Stream"
+
+msgid "Stream Relay delay"
+msgstr "Stream Relay vertraging"
 
 msgid "Stream request"
 msgstr "Stream verzoek"
