--- a/po/cs.po
+++ b/po/cs.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: OpenPLi enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-11-08 16:10+0100\n"
+"POT-Creation-Date: 2023-12-16 09:57+0100\n"
 "PO-Revision-Date: \n"
 "Last-Translator: IMS <ims@openpli.org>\n"
 "Language-Team: PLi <ims@openpli.org>\n"
@@ -181,6 +181,10 @@ msgstr "%a %e/%m"
 #. TRANSLATORS: long date representation short dayname daynum short monthname hour:minute in strftime() format! See 'man strftime'
 msgid "%a %e/%m  %-H:%M"
 msgstr "%a %e/%m  %-H:%M"
+
+#, python-format
+msgid "%d"
+msgstr ""
 
 #, python-format
 msgid "%d MB"
@@ -1195,9 +1199,6 @@ msgstr "umění/kultura (bez hudby)"
 
 msgid "Aruba"
 msgstr "Aruba"
-
-msgid "As defined by the skin"
-msgstr "Definováno skinem"
 
 #
 msgid "Ask user"
@@ -2227,17 +2228,20 @@ msgid "Configure how the fan should operate"
 msgstr "Nastavuje režim práce ventilátoru."
 
 #
-msgid "Configure if and how crypto icons will be shown in the channel selection list."
+#, fuzzy
+msgid "Configure if and how crypto icons will be shown in the channel selection list (left alignment only available in single line mode)."
 msgstr "Nastavuje zda a jak budou zobrazovány ikony kódovaných programů v přehledech kanálů."
 
 msgid "Configure if and how long the latest service in Picture in Picture mode will be remembered."
 msgstr "Nastavuje zda a jak dlouho bude zapamatován poslední program v PiP."
 
-msgid "Configure if and how service type icons will be shown in the channel selection list."
+#, fuzzy
+msgid "Configure if and how service type icons will be shown in the channel selection list (left alignment only available in single line mode)."
 msgstr "Nastavuje zda a jak budou zobrazovány ikony typu programu v seznamu kanálů."
 
 #
-msgid "Configure if and how the record indicator will be shown in the channel selection list."
+#, fuzzy
+msgid "Configure if and how the record indicator will be shown in the channel selection list (left alignment only available in single line mode)."
 msgstr "Nastavuje zda a jak bude zobrazovat indikaci nahrávaného kanálu v seznamu kanálů."
 
 #
@@ -2995,6 +2999,9 @@ msgstr "Zpoždění v milisekundách před začátkem přetáčení textu na dis
 msgid "Delay in miliseconds between scrolling characters on display."
 msgstr "Zpoždění v milisekundách mezi přetáčením znaků na displeji."
 
+msgid "Delay when closing a stream relay service before reallocating the tuner for another service. Using '0' is only recommended for boxes with multiple satellite tuners."
+msgstr ""
+
 #
 msgid "Delete"
 msgstr "Smazat"
@@ -3695,6 +3702,14 @@ msgstr "Povolit automatický fastscan"
 #, python-format
 msgid "Enable auto fastscan for %s"
 msgstr "Povolit automatický fastscan pro %s"
+
+msgid "Enable blink functionality for some areas like record icon."
+msgstr ""
+
+#
+#, fuzzy
+msgid "Enable blinking"
+msgstr "Povolit Virgin EPG"
 
 #
 msgid "Enable bluetooth audio"
@@ -5729,6 +5744,9 @@ msgstr "Lucembursky"
 msgid "MB"
 msgstr "MB"
 
+msgid "MENU"
+msgstr ""
+
 msgid "MHz"
 msgstr "MHz"
 
@@ -6795,8 +6813,15 @@ msgstr "PMT PID"
 msgid "PPanel"
 msgstr "PPanel"
 
+msgid "PREVIOUS"
+msgstr ""
+
 msgid "PULSe 4K(mini)"
 msgstr "PULSe 4K(mini)"
+
+#, fuzzy
+msgid "PVR"
+msgstr "OVR"
 
 #
 msgid "Package list update"
@@ -7675,6 +7700,10 @@ msgstr "Python frontend pro /tmp/mmi.socket"
 
 msgid "Python version: "
 msgstr "Python: "
+
+#, fuzzy
+msgid "Pythonscript"
+msgstr "Skript"
 
 msgid "Qatar"
 msgstr "Katar"
@@ -9041,6 +9070,11 @@ msgid "Service info - tuner setting values"
 msgstr "Informace o programu - hodnoty nastavení tuneru"
 
 #
+#, fuzzy
+msgid "Service info font size"
+msgstr "Info o programu"
+
+#
 msgid ""
 "Service invalid!\n"
 "(Timeout reading PMT)"
@@ -9051,6 +9085,10 @@ msgstr ""
 msgid "Service name"
 msgstr "Název programu"
 
+#, fuzzy
+msgid "Service name font size"
+msgstr "Název programu"
+
 #
 msgid ""
 "Service not found!\n"
@@ -9058,6 +9096,10 @@ msgid ""
 msgstr ""
 "Služba nebyla nalezena!\n"
 "(SID nebyl nalezen v PAT)"
+
+#, fuzzy
+msgid "Service number font size"
+msgstr "Velikost textu"
 
 msgid "Service reference"
 msgstr "Service reference"
@@ -9158,7 +9200,8 @@ msgid "Set the port of the OpenWebif from your fallback tuner"
 msgstr "Nastavte port pro OpenWebIf z Vašeho záložního tuneru."
 
 #
-msgid "Set the type of the progress indication in the channel selection screen."
+#, fuzzy
+msgid "Set the type of the progress indication in the channel selection screen (right alignment only available in single line mode)."
 msgstr "Nastavuje typ průběhů pořadů ve výběru programů."
 
 msgid "Set time window to 1 hour"
@@ -9304,6 +9347,9 @@ msgstr "Zobrazovat informace o kódování v infobaru"
 
 msgid "Show detailed event info"
 msgstr "Zobrazit detailní informace o události"
+
+msgid "Show disabled timers (local only)"
+msgstr ""
 
 #
 msgid "Show event details"
@@ -9584,10 +9630,6 @@ msgstr "Jeden"
 #
 msgid "Single EPG"
 msgstr "EPG programu"
-
-#
-msgid "Single line mode"
-msgstr "Jednořádkový mód"
 
 #
 msgid "Single satellite"
@@ -10119,6 +10161,10 @@ msgstr "Uložená pozice"
 
 msgid "Stream"
 msgstr "Stream"
+
+#, fuzzy
+msgid "Stream Relay delay"
+msgstr "Zpoždění přetáčení"
 
 msgid "Stream request"
 msgstr "Požadavek streamu"
@@ -10676,6 +10722,9 @@ msgstr ""
 #
 msgid "This DVD RW medium is already formatted - reformatting will erase all content on the disc."
 msgstr "DVD RW médium je již naformátováno - nové formátování smaže veškerý obsah na tomto DVD."
+
+msgid "This allows you to change the font size relative to skin size, so 1 increases by 1 point size, and -1 decreases by 1 point size"
+msgstr ""
 
 msgid "This bouquet is protected by a parental control PIN"
 msgstr "Tento přehled je chráněn rodičovským PINem"
@@ -11287,13 +11336,6 @@ msgid "Two"
 msgstr "Dva"
 
 #
-msgid "Two lines"
-msgstr "Dva řádky"
-
-msgid "Two lines and next event"
-msgstr "Dva řádky a další událost"
-
-#
 msgid "Type"
 msgstr "Typ"
 
@@ -11575,6 +11617,11 @@ msgstr "Použít původní pozici teletextu"
 #
 msgid "Use power measurement"
 msgstr "Použít měření proudu"
+
+#
+#, fuzzy
+msgid "Use skin default"
+msgstr "Výchozí"
 
 #
 msgid "Use the network wizard to configure selected network adapter"
@@ -13255,6 +13302,11 @@ msgid "menu"
 msgstr "menu"
 
 #
+#, fuzzy
+msgid "min"
+msgstr " min"
+
+#
 msgid "mins"
 msgstr "minut"
 
@@ -13755,6 +13807,15 @@ msgstr "turistika/cestování"
 msgid "true"
 msgstr "ano"
 
+#
+#, fuzzy
+msgid "two lines"
+msgstr "Dva řádky"
+
+#, fuzzy
+msgid "two lines+next event"
+msgstr "Dva řádky a další událost"
+
 msgid "type"
 msgstr "typ"
 
@@ -13909,4 +13970,10 @@ msgid "zapped"
 msgstr "přepnutý"
 
 msgid "®"
+msgstr ""
+
+msgid "°E"
+msgstr ""
+
+msgid "°W"
 msgstr ""
