--- a/po/he.po
+++ b/po/he.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: tuxbox-enigma 0.0.1\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-11-08 16:10+0100\n"
+"POT-Creation-Date: 2023-12-16 09:57+0100\n"
 "PO-Revision-Date: 2012-03-08 10:40+0330\n"
 "Last-Translator: \n"
 "Language-Team: Arabic <moustafagamal@hotmail.com>\n"
@@ -179,6 +179,10 @@ msgstr ""
 
 #. TRANSLATORS: long date representation short dayname daynum short monthname hour:minute in strftime() format! See 'man strftime'
 msgid "%a %e/%m  %-H:%M"
+msgstr ""
+
+#, python-format
+msgid "%d"
 msgstr ""
 
 #, python-format
@@ -1126,9 +1130,6 @@ msgid "Arts/Culture (without music)"
 msgstr ""
 
 msgid "Aruba"
-msgstr ""
-
-msgid "As defined by the skin"
 msgstr ""
 
 msgid "Ask user"
@@ -2101,16 +2102,16 @@ msgstr ""
 msgid "Configure how the fan should operate"
 msgstr ""
 
-msgid "Configure if and how crypto icons will be shown in the channel selection list."
+msgid "Configure if and how crypto icons will be shown in the channel selection list (left alignment only available in single line mode)."
 msgstr ""
 
 msgid "Configure if and how long the latest service in Picture in Picture mode will be remembered."
 msgstr ""
 
-msgid "Configure if and how service type icons will be shown in the channel selection list."
+msgid "Configure if and how service type icons will be shown in the channel selection list (left alignment only available in single line mode)."
 msgstr ""
 
-msgid "Configure if and how the record indicator will be shown in the channel selection list."
+msgid "Configure if and how the record indicator will be shown in the channel selection list (left alignment only available in single line mode)."
 msgstr ""
 
 msgid "Configure if and how wide columns will be shown in the channel selection list."
@@ -2831,6 +2832,9 @@ msgstr ""
 msgid "Delay in miliseconds between scrolling characters on display."
 msgstr ""
 
+msgid "Delay when closing a stream relay service before reallocating the tuner for another service. Using '0' is only recommended for boxes with multiple satellite tuners."
+msgstr ""
+
 #
 msgid "Delete"
 msgstr "מחק"
@@ -3468,6 +3472,12 @@ msgstr ""
 
 #, python-format
 msgid "Enable auto fastscan for %s"
+msgstr ""
+
+msgid "Enable blink functionality for some areas like record icon."
+msgstr ""
+
+msgid "Enable blinking"
 msgstr ""
 
 #
@@ -5431,6 +5441,9 @@ msgstr ""
 msgid "MB"
 msgstr "B"
 
+msgid "MENU"
+msgstr ""
+
 msgid "MHz"
 msgstr ""
 
@@ -6470,7 +6483,13 @@ msgstr ""
 msgid "PPanel"
 msgstr ""
 
+msgid "PREVIOUS"
+msgstr ""
+
 msgid "PULSe 4K(mini)"
+msgstr ""
+
+msgid "PVR"
 msgstr ""
 
 #
@@ -7280,6 +7299,9 @@ msgid "Python frontend for /tmp/mmi.socket"
 msgstr ""
 
 msgid "Python version: "
+msgstr ""
+
+msgid "Pythonscript"
 msgstr ""
 
 msgid "Qatar"
@@ -8578,6 +8600,11 @@ msgid "Service info - tuner setting values"
 msgstr ""
 
 #
+#, fuzzy
+msgid "Service info font size"
+msgstr "Serviceinfo"
+
+#
 msgid ""
 "Service invalid!\n"
 "(Timeout reading PMT)"
@@ -8589,10 +8616,20 @@ msgid "Service name"
 msgstr "סרוקת שירות"
 
 #
+#, fuzzy
+msgid "Service name font size"
+msgstr "סרוקת שירות"
+
+#
 msgid ""
 "Service not found!\n"
 "(SID not found in PAT)"
 msgstr ""
+
+#
+#, fuzzy
+msgid "Service number font size"
+msgstr "תרגום"
 
 msgid "Service reference"
 msgstr ""
@@ -8693,7 +8730,7 @@ msgstr ""
 msgid "Set the port of the OpenWebif from your fallback tuner"
 msgstr ""
 
-msgid "Set the type of the progress indication in the channel selection screen."
+msgid "Set the type of the progress indication in the channel selection screen (right alignment only available in single line mode)."
 msgstr ""
 
 msgid "Set time window to 1 hour"
@@ -8838,6 +8875,9 @@ msgid "Show crypto info in infobar"
 msgstr ""
 
 msgid "Show detailed event info"
+msgstr ""
+
+msgid "Show disabled timers (local only)"
 msgstr ""
 
 #, fuzzy
@@ -9111,10 +9151,6 @@ msgstr "Single"
 
 msgid "Single EPG"
 msgstr " יחיד EPG"
-
-#, fuzzy
-msgid "Single line mode"
-msgstr "Select video mode"
 
 #
 msgid "Single satellite"
@@ -9639,6 +9675,9 @@ msgid "Stored position"
 msgstr "Stored position"
 
 msgid "Stream"
+msgstr ""
+
+msgid "Stream Relay delay"
 msgstr ""
 
 msgid "Stream request"
@@ -10188,6 +10227,9 @@ msgstr ""
 
 #
 msgid "This DVD RW medium is already formatted - reformatting will erase all content on the disc."
+msgstr ""
+
+msgid "This allows you to change the font size relative to skin size, so 1 increases by 1 point size, and -1 decreases by 1 point size"
 msgstr ""
 
 msgid "This bouquet is protected by a parental control PIN"
@@ -10781,14 +10823,6 @@ msgstr ""
 msgid "Two"
 msgstr "שתיים"
 
-#, fuzzy
-msgid "Two lines"
-msgstr "show Infoline"
-
-#, fuzzy
-msgid "Two lines and next event"
-msgstr "move down to next entry"
-
 #
 msgid "Type"
 msgstr "סוג"
@@ -11060,6 +11094,10 @@ msgstr ""
 
 msgid "Use power measurement"
 msgstr "Use power measurement"
+
+#, fuzzy
+msgid "Use skin default"
+msgstr "שחזור גיבויים"
 
 #, fuzzy
 msgid "Use the network wizard to configure selected network adapter"
@@ -12620,6 +12658,11 @@ msgstr ""
 msgid "menu"
 msgstr "תפריט"
 
+#
+#, fuzzy
+msgid "min"
+msgstr "דקות %d"
+
 msgid "mins"
 msgstr "דקות"
 
@@ -13078,6 +13121,14 @@ msgstr ""
 msgid "true"
 msgstr ""
 
+#, fuzzy
+msgid "two lines"
+msgstr "show Infoline"
+
+#, fuzzy
+msgid "two lines+next event"
+msgstr "move down to next entry"
+
 #
 #, fuzzy
 msgid "type"
@@ -13224,4 +13275,10 @@ msgid "zapped"
 msgstr "זופזפ"
 
 msgid "®"
+msgstr ""
+
+msgid "°E"
+msgstr ""
+
+msgid "°W"
 msgstr ""
