--- a/po/zh_HK.po
+++ b/po/zh_HK.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-11-08 16:10+0100\n"
+"POT-Creation-Date: 2023-12-16 09:57+0100\n"
 "PO-Revision-Date: \n"
 "Last-Translator: 王彪 <satfan@163.com>\n"
 "Language-Team: 中國\n"
@@ -165,6 +165,10 @@ msgstr ""
 
 #. TRANSLATORS: long date representation short dayname daynum short monthname hour:minute in strftime() format! See 'man strftime'
 msgid "%a %e/%m  %-H:%M"
+msgstr ""
+
+#, python-format
+msgid "%d"
 msgstr ""
 
 #, python-format
@@ -1031,9 +1035,6 @@ msgid "Arts/Culture (without music)"
 msgstr ""
 
 msgid "Aruba"
-msgstr ""
-
-msgid "As defined by the skin"
 msgstr ""
 
 msgid "Ask user"
@@ -1946,16 +1947,16 @@ msgstr ""
 msgid "Configure how the fan should operate"
 msgstr ""
 
-msgid "Configure if and how crypto icons will be shown in the channel selection list."
+msgid "Configure if and how crypto icons will be shown in the channel selection list (left alignment only available in single line mode)."
 msgstr ""
 
 msgid "Configure if and how long the latest service in Picture in Picture mode will be remembered."
 msgstr ""
 
-msgid "Configure if and how service type icons will be shown in the channel selection list."
+msgid "Configure if and how service type icons will be shown in the channel selection list (left alignment only available in single line mode)."
 msgstr ""
 
-msgid "Configure if and how the record indicator will be shown in the channel selection list."
+msgid "Configure if and how the record indicator will be shown in the channel selection list (left alignment only available in single line mode)."
 msgstr ""
 
 msgid "Configure if and how wide columns will be shown in the channel selection list."
@@ -2641,6 +2642,9 @@ msgstr ""
 msgid "Delay in miliseconds between scrolling characters on display."
 msgstr ""
 
+msgid "Delay when closing a stream relay service before reallocating the tuner for another service. Using '0' is only recommended for boxes with multiple satellite tuners."
+msgstr ""
+
 msgid "Delete"
 msgstr "刪除"
 
@@ -3231,6 +3235,12 @@ msgstr ""
 
 #, python-format
 msgid "Enable auto fastscan for %s"
+msgstr ""
+
+msgid "Enable blink functionality for some areas like record icon."
+msgstr ""
+
+msgid "Enable blinking"
 msgstr ""
 
 #, fuzzy
@@ -5038,6 +5048,9 @@ msgstr ""
 msgid "MB"
 msgstr "B"
 
+msgid "MENU"
+msgstr ""
+
 msgid "MHz"
 msgstr ""
 
@@ -5986,7 +5999,13 @@ msgstr ""
 msgid "PPanel"
 msgstr ""
 
+msgid "PREVIOUS"
+msgstr ""
+
 msgid "PULSe 4K(mini)"
+msgstr ""
+
+msgid "PVR"
 msgstr ""
 
 msgid "Package list update"
@@ -6735,6 +6754,9 @@ msgid "Python frontend for /tmp/mmi.socket"
 msgstr ""
 
 msgid "Python version: "
+msgstr ""
+
+msgid "Pythonscript"
 msgstr ""
 
 msgid "Qatar"
@@ -7940,6 +7962,10 @@ msgstr ""
 msgid "Service info - tuner setting values"
 msgstr ""
 
+#, fuzzy
+msgid "Service info font size"
+msgstr "頻道未找到"
+
 msgid ""
 "Service invalid!\n"
 "(Timeout reading PMT)"
@@ -7950,12 +7976,18 @@ msgstr ""
 msgid "Service name"
 msgstr ""
 
+msgid "Service name font size"
+msgstr ""
+
 msgid ""
 "Service not found!\n"
 "(SID not found in PAT)"
 msgstr ""
 "頻道未找到!\n"
 "(在PAT中找不以SID)"
+
+msgid "Service number font size"
+msgstr ""
 
 msgid "Service reference"
 msgstr ""
@@ -8046,7 +8078,7 @@ msgstr ""
 msgid "Set the port of the OpenWebif from your fallback tuner"
 msgstr ""
 
-msgid "Set the type of the progress indication in the channel selection screen."
+msgid "Set the type of the progress indication in the channel selection screen (right alignment only available in single line mode)."
 msgstr ""
 
 msgid "Set time window to 1 hour"
@@ -8177,6 +8209,9 @@ msgid "Show crypto info in infobar"
 msgstr ""
 
 msgid "Show detailed event info"
+msgstr ""
+
+msgid "Show disabled timers (local only)"
 msgstr ""
 
 msgid "Show event details"
@@ -8425,10 +8460,6 @@ msgstr "單個"
 
 msgid "Single EPG"
 msgstr "單個-EPG"
-
-#, fuzzy
-msgid "Single line mode"
-msgstr "設定視頻模式"
 
 msgid "Single satellite"
 msgstr "單個衛星"
@@ -8897,6 +8928,9 @@ msgid "Stored position"
 msgstr "存貯位置"
 
 msgid "Stream"
+msgstr ""
+
+msgid "Stream Relay delay"
 msgstr ""
 
 msgid "Stream request"
@@ -9382,6 +9416,9 @@ msgstr ""
 
 msgid "This DVD RW medium is already formatted - reformatting will erase all content on the disc."
 msgstr "這張DVD RW已經格式化過，再次格式化將刪除所有檔"
+
+msgid "This allows you to change the font size relative to skin size, so 1 increases by 1 point size, and -1 decreases by 1 point size"
+msgstr ""
 
 msgid "This bouquet is protected by a parental control PIN"
 msgstr ""
@@ -9916,12 +9953,6 @@ msgstr ""
 msgid "Two"
 msgstr "2"
 
-msgid "Two lines"
-msgstr ""
-
-msgid "Two lines and next event"
-msgstr ""
-
 msgid "Type"
 msgstr "類型"
 
@@ -10180,6 +10211,10 @@ msgstr ""
 
 msgid "Use power measurement"
 msgstr "使用功率測量"
+
+#, fuzzy
+msgid "Use skin default"
+msgstr "預設列表樣式"
 
 msgid "Use the network wizard to configure selected network adapter"
 msgstr ""
@@ -11647,6 +11682,10 @@ msgstr ""
 msgid "menu"
 msgstr "功能表"
 
+#, fuzzy
+msgid "min"
+msgstr "%d 分鐘"
+
 msgid "mins"
 msgstr "分鐘"
 
@@ -12086,6 +12125,12 @@ msgstr ""
 msgid "true"
 msgstr ""
 
+msgid "two lines"
+msgstr ""
+
+msgid "two lines+next event"
+msgstr ""
+
 msgid "type"
 msgstr ""
 
@@ -12220,4 +12265,10 @@ msgid "zapped"
 msgstr "轉自"
 
 msgid "®"
+msgstr ""
+
+msgid "°E"
+msgstr ""
+
+msgid "°W"
 msgstr ""
