--- a/po/nn.po
+++ b/po/nn.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-11-08 16:10+0100\n"
+"POT-Creation-Date: 2023-12-16 09:57+0100\n"
 "PO-Revision-Date: 2013-10-23 19:15+0100\n"
 "Last-Translator: andy1 <dmmm8000pvr@gmail.com>\n"
 "Language-Team: none\n"
@@ -175,6 +175,10 @@ msgstr ""
 
 #. TRANSLATORS: long date representation short dayname daynum short monthname hour:minute in strftime() format! See 'man strftime'
 msgid "%a %e/%m  %-H:%M"
+msgstr ""
+
+#, python-format
+msgid "%d"
 msgstr ""
 
 #, python-format
@@ -1125,9 +1129,6 @@ msgid "Arts/Culture (without music)"
 msgstr "kunst/kultur (uten musikk, generelt)"
 
 msgid "Aruba"
-msgstr ""
-
-msgid "As defined by the skin"
 msgstr ""
 
 #
@@ -2145,16 +2146,16 @@ msgstr "Still inn lengden på filnavn som skal brukes til opptak."
 msgid "Configure how the fan should operate"
 msgstr ""
 
-msgid "Configure if and how crypto icons will be shown in the channel selection list."
+msgid "Configure if and how crypto icons will be shown in the channel selection list (left alignment only available in single line mode)."
 msgstr ""
 
 msgid "Configure if and how long the latest service in Picture in Picture mode will be remembered."
 msgstr ""
 
-msgid "Configure if and how service type icons will be shown in the channel selection list."
+msgid "Configure if and how service type icons will be shown in the channel selection list (left alignment only available in single line mode)."
 msgstr ""
 
-msgid "Configure if and how the record indicator will be shown in the channel selection list."
+msgid "Configure if and how the record indicator will be shown in the channel selection list (left alignment only available in single line mode)."
 msgstr ""
 
 msgid "Configure if and how wide columns will be shown in the channel selection list."
@@ -2888,6 +2889,9 @@ msgstr ""
 msgid "Delay in miliseconds between scrolling characters on display."
 msgstr ""
 
+msgid "Delay when closing a stream relay service before reallocating the tuner for another service. Using '0' is only recommended for boxes with multiple satellite tuners."
+msgstr ""
+
 #
 msgid "Delete"
 msgstr "Slette"
@@ -3552,6 +3556,12 @@ msgstr ""
 
 #, python-format
 msgid "Enable auto fastscan for %s"
+msgstr ""
+
+msgid "Enable blink functionality for some areas like record icon."
+msgstr ""
+
+msgid "Enable blinking"
 msgstr ""
 
 #
@@ -5546,6 +5556,9 @@ msgstr "Luxemburgsk"
 msgid "MB"
 msgstr ""
 
+msgid "MENU"
+msgstr ""
+
 msgid "MHz"
 msgstr ""
 
@@ -6598,7 +6611,13 @@ msgstr ""
 msgid "PPanel"
 msgstr ""
 
+msgid "PREVIOUS"
+msgstr ""
+
 msgid "PULSe 4K(mini)"
+msgstr ""
+
+msgid "PVR"
 msgstr ""
 
 #
@@ -7422,6 +7441,9 @@ msgid "Python frontend for /tmp/mmi.socket"
 msgstr ""
 
 msgid "Python version: "
+msgstr ""
+
+msgid "Pythonscript"
 msgstr ""
 
 msgid "Qatar"
@@ -8728,6 +8750,10 @@ msgstr ""
 msgid "Service info - tuner setting values"
 msgstr ""
 
+#, fuzzy
+msgid "Service info font size"
+msgstr "Kanalinfo"
+
 msgid ""
 "Service invalid!\n"
 "(Timeout reading PMT)"
@@ -8739,12 +8765,21 @@ msgstr ""
 msgid "Service name"
 msgstr "Kanalnavn"
 
+#
+#, fuzzy
+msgid "Service name font size"
+msgstr "Kanalnavn"
+
 msgid ""
 "Service not found!\n"
 "(SID not found in PAT)"
 msgstr ""
 "Kanalen ble ikke funnet!\n"
 "(SID ikke funnet i PAT)"
+
+#, fuzzy
+msgid "Service number font size"
+msgstr "Undertekst skriftstørrelse"
 
 msgid "Service reference"
 msgstr "Kanalreferanse"
@@ -8841,7 +8876,8 @@ msgstr ""
 msgid "Set the port of the OpenWebif from your fallback tuner"
 msgstr ""
 
-msgid "Set the type of the progress indication in the channel selection screen."
+#, fuzzy
+msgid "Set the type of the progress indication in the channel selection screen (right alignment only available in single line mode)."
 msgstr "Angi framdriftstype på kanalvalgs skjermen."
 
 msgid "Set time window to 1 hour"
@@ -8983,6 +9019,9 @@ msgstr "Vis krypteringsinfo på informasjonslinjen"
 
 msgid "Show detailed event info"
 msgstr "Vis detaljert programinformasjon"
+
+msgid "Show disabled timers (local only)"
+msgstr ""
 
 #
 msgid "Show event details"
@@ -9257,11 +9296,6 @@ msgstr "Enkel"
 #
 msgid "Single EPG"
 msgstr "Enkel EPG"
-
-#
-#, fuzzy
-msgid "Single line mode"
-msgstr "Velg video modus"
 
 msgid "Single satellite"
 msgstr "En satellitt"
@@ -9780,6 +9814,9 @@ msgstr "Lagret posisjon"
 
 msgid "Stream"
 msgstr "Datastrøm"
+
+msgid "Stream Relay delay"
+msgstr ""
 
 msgid "Stream request"
 msgstr "Datastrøm forespørsel"
@@ -10316,6 +10353,9 @@ msgstr ""
 #
 msgid "This DVD RW medium is already formatted - reformatting will erase all content on the disc."
 msgstr "Denne DVD RW er allerede formatert - reformatering sletter alt innhold på platen."
+
+msgid "This allows you to change the font size relative to skin size, so 1 increases by 1 point size, and -1 decreases by 1 point size"
+msgstr ""
 
 msgid "This bouquet is protected by a parental control PIN"
 msgstr ""
@@ -10926,15 +10966,6 @@ msgid "Two"
 msgstr "To"
 
 #
-#, fuzzy
-msgid "Two lines"
-msgstr "Vis informasjonslinje"
-
-#, fuzzy
-msgid "Two lines and next event"
-msgstr "Gå til neste program"
-
-#
 msgid "Type"
 msgstr "Type"
 
@@ -11207,6 +11238,11 @@ msgstr "Bruk standard tekst-TV posisjon"
 
 msgid "Use power measurement"
 msgstr "Bruk strøm-måling"
+
+#
+#, fuzzy
+msgid "Use skin default"
+msgstr "standard liste"
 
 #
 msgid "Use the network wizard to configure selected network adapter"
@@ -12854,6 +12890,10 @@ msgstr "medisin/fysiologi/psykologi"
 msgid "menu"
 msgstr "meny"
 
+#, fuzzy
+msgid "min"
+msgstr "%d minutt"
+
 #
 msgid "mins"
 msgstr "min"
@@ -13347,6 +13387,15 @@ msgstr "turisme/reise"
 msgid "true"
 msgstr "sant"
 
+#
+#, fuzzy
+msgid "two lines"
+msgstr "Vis informasjonslinje"
+
+#, fuzzy
+msgid "two lines+next event"
+msgstr "Gå til neste program"
+
 #, fuzzy
 msgid "type"
 msgstr "Vis type"
@@ -13499,4 +13548,10 @@ msgid "zapped"
 msgstr "gått til"
 
 msgid "®"
+msgstr ""
+
+msgid "°E"
+msgstr ""
+
+msgid "°W"
 msgstr ""
