--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -5,7 +5,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-11-08 16:10+0100\n"
+"POT-Creation-Date: 2023-12-16 09:57+0100\n"
 "PO-Revision-Date: 2013-10-20 19:13-0300\n"
 "Last-Translator: Diogo <pingflood@gmail.com>\n"
 "Language-Team: Traduzido por Frank Viana <franksrviana@gmail.com>\n"
@@ -171,6 +171,10 @@ msgstr ""
 
 #. TRANSLATORS: long date representation short dayname daynum short monthname hour:minute in strftime() format! See 'man strftime'
 msgid "%a %e/%m  %-H:%M"
+msgstr ""
+
+#, python-format
+msgid "%d"
 msgstr ""
 
 #, python-format
@@ -1045,9 +1049,6 @@ msgid "Arts/Culture (without music)"
 msgstr "Arte/Cultura (sem música, geral)"
 
 msgid "Aruba"
-msgstr ""
-
-msgid "As defined by the skin"
 msgstr ""
 
 msgid "Ask user"
@@ -1967,17 +1968,20 @@ msgstr "Configurar como os nomes de arquivos de gravação são construídos."
 msgid "Configure how the fan should operate"
 msgstr ""
 
-msgid "Configure if and how crypto icons will be shown in the channel selection list."
+#, fuzzy
+msgid "Configure if and how crypto icons will be shown in the channel selection list (left alignment only available in single line mode)."
 msgstr "Configurar se e como os ícones encriptados serão mostrados na seleção da lista de canal"
 
 msgid "Configure if and how long the latest service in Picture in Picture mode will be remembered."
 msgstr ""
 
-msgid "Configure if and how service type icons will be shown in the channel selection list."
-msgstr ""
+#, fuzzy
+msgid "Configure if and how service type icons will be shown in the channel selection list (left alignment only available in single line mode)."
+msgstr "Configurar se e como os ícones encriptados serão mostrados na seleção da lista de canal"
 
-msgid "Configure if and how the record indicator will be shown in the channel selection list."
-msgstr ""
+#, fuzzy
+msgid "Configure if and how the record indicator will be shown in the channel selection list (left alignment only available in single line mode)."
+msgstr "Configurar se e como os ícones encriptados serão mostrados na seleção da lista de canal"
 
 msgid "Configure if and how wide columns will be shown in the channel selection list."
 msgstr ""
@@ -2667,6 +2671,9 @@ msgstr ""
 msgid "Delay in miliseconds between scrolling characters on display."
 msgstr ""
 
+msgid "Delay when closing a stream relay service before reallocating the tuner for another service. Using '0' is only recommended for boxes with multiple satellite tuners."
+msgstr ""
+
 msgid "Delete"
 msgstr "Remover"
 
@@ -3266,6 +3273,12 @@ msgstr ""
 
 #, python-format
 msgid "Enable auto fastscan for %s"
+msgstr ""
+
+msgid "Enable blink functionality for some areas like record icon."
+msgstr ""
+
+msgid "Enable blinking"
 msgstr ""
 
 #, fuzzy
@@ -5080,6 +5093,9 @@ msgstr "Luxemburguês"
 msgid "MB"
 msgstr ""
 
+msgid "MENU"
+msgstr ""
+
 msgid "MHz"
 msgstr ""
 
@@ -6030,7 +6046,13 @@ msgstr ""
 msgid "PPanel"
 msgstr ""
 
+msgid "PREVIOUS"
+msgstr ""
+
 msgid "PULSe 4K(mini)"
+msgstr ""
+
+msgid "PVR"
 msgstr ""
 
 msgid "Package list update"
@@ -6785,6 +6807,9 @@ msgid "Python frontend for /tmp/mmi.socket"
 msgstr "Interface Python para /tmp/mmi.socket"
 
 msgid "Python version: "
+msgstr ""
+
+msgid "Pythonscript"
 msgstr ""
 
 msgid "Qatar"
@@ -7993,6 +8018,10 @@ msgstr ""
 msgid "Service info - tuner setting values"
 msgstr ""
 
+#, fuzzy
+msgid "Service info font size"
+msgstr "Informações do canal"
+
 msgid ""
 "Service invalid!\n"
 "(Timeout reading PMT)"
@@ -8003,12 +8032,20 @@ msgstr ""
 msgid "Service name"
 msgstr "Serviço"
 
+#, fuzzy
+msgid "Service name font size"
+msgstr "Serviço"
+
 msgid ""
 "Service not found!\n"
 "(SID not found in PAT)"
 msgstr ""
 "Canal não encontrado!\n"
 "(SID not found in PAT)"
+
+#, fuzzy
+msgid "Service number font size"
+msgstr "Tamanho da fonte da legenda"
 
 msgid "Service reference"
 msgstr "Referência"
@@ -8101,7 +8138,8 @@ msgstr ""
 msgid "Set the port of the OpenWebif from your fallback tuner"
 msgstr ""
 
-msgid "Set the type of the progress indication in the channel selection screen."
+#, fuzzy
+msgid "Set the type of the progress indication in the channel selection screen (right alignment only available in single line mode)."
 msgstr "Progresso dos eventos na lista de canais."
 
 msgid "Set time window to 1 hour"
@@ -8234,6 +8272,9 @@ msgstr "Exibir encriptação na barra de informações"
 
 msgid "Show detailed event info"
 msgstr "Exibir informação detalhada do evento"
+
+msgid "Show disabled timers (local only)"
+msgstr ""
 
 msgid "Show event details"
 msgstr "Exibir detalhes do evento"
@@ -8484,10 +8525,6 @@ msgstr "Um satélite"
 
 msgid "Single EPG"
 msgstr "EPG simples"
-
-#, fuzzy
-msgid "Single line mode"
-msgstr "Selecione o modo de vídeo"
 
 msgid "Single satellite"
 msgstr "Satélite"
@@ -8959,6 +8996,9 @@ msgid "Stored position"
 msgstr "Posição guardada"
 
 msgid "Stream"
+msgstr ""
+
+msgid "Stream Relay delay"
 msgstr ""
 
 msgid "Stream request"
@@ -9457,6 +9497,9 @@ msgstr ""
 
 msgid "This DVD RW medium is already formatted - reformatting will erase all content on the disc."
 msgstr "Este DVD RW já está formatado. Reformatar irá remover todo o conteúdo do disco."
+
+msgid "This allows you to change the font size relative to skin size, so 1 increases by 1 point size, and -1 decreases by 1 point size"
+msgstr ""
 
 msgid "This bouquet is protected by a parental control PIN"
 msgstr ""
@@ -10006,14 +10049,6 @@ msgstr ""
 msgid "Two"
 msgstr "Dois"
 
-#, fuzzy
-msgid "Two lines"
-msgstr "Exibir linha de informações"
-
-#, fuzzy
-msgid "Two lines and next event"
-msgstr "Ir para o próximo evento"
-
 msgid "Type"
 msgstr "Tipo"
 
@@ -10272,6 +10307,10 @@ msgstr "Usar a posição original do teletexto"
 
 msgid "Use power measurement"
 msgstr "Usar controle da alimentação"
+
+#, fuzzy
+msgid "Use skin default"
+msgstr "Lista normal"
 
 msgid "Use the network wizard to configure selected network adapter"
 msgstr "Configurar o adaptador de rede"
@@ -11798,6 +11837,10 @@ msgstr "Medicina/Fisiologia/Psicologia"
 msgid "menu"
 msgstr "Menu"
 
+#, fuzzy
+msgid "min"
+msgstr "%d minuto"
+
 msgid "mins"
 msgstr "mins"
 
@@ -12246,6 +12289,14 @@ msgid "true"
 msgstr "Verdadeiro"
 
 #, fuzzy
+msgid "two lines"
+msgstr "Exibir linha de informações"
+
+#, fuzzy
+msgid "two lines+next event"
+msgstr "Ir para o próximo evento"
+
+#, fuzzy
 msgid "type"
 msgstr "Listar tipo"
 
@@ -12380,4 +12431,10 @@ msgid "zapped"
 msgstr "zapped"
 
 msgid "®"
+msgstr ""
+
+msgid "°E"
+msgstr ""
+
+msgid "°W"
 msgstr ""
