--- a/po/ro.po
+++ b/po/ro.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: tuxbox-enigma 0.0.1\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-11-08 16:10+0100\n"
+"POT-Creation-Date: 2023-12-16 09:57+0100\n"
 "PO-Revision-Date: 2010-03-09 21:03+0100\n"
 "Last-Translator: \n"
 "Language-Team: HDTV ROMANIA(superonic,costel_mbc,neutrin,otheitis,cipy_1982,neutrin,runcanion)\n"
@@ -168,6 +168,10 @@ msgstr ""
 
 #. TRANSLATORS: long date representation short dayname daynum short monthname hour:minute in strftime() format! See 'man strftime'
 msgid "%a %e/%m  %-H:%M"
+msgstr ""
+
+#, python-format
+msgid "%d"
 msgstr ""
 
 #, python-format
@@ -1056,9 +1060,6 @@ msgid "Arts/Culture (without music)"
 msgstr ""
 
 msgid "Aruba"
-msgstr ""
-
-msgid "As defined by the skin"
 msgstr ""
 
 msgid "Ask user"
@@ -1988,16 +1989,16 @@ msgstr ""
 msgid "Configure how the fan should operate"
 msgstr ""
 
-msgid "Configure if and how crypto icons will be shown in the channel selection list."
+msgid "Configure if and how crypto icons will be shown in the channel selection list (left alignment only available in single line mode)."
 msgstr ""
 
 msgid "Configure if and how long the latest service in Picture in Picture mode will be remembered."
 msgstr ""
 
-msgid "Configure if and how service type icons will be shown in the channel selection list."
+msgid "Configure if and how service type icons will be shown in the channel selection list (left alignment only available in single line mode)."
 msgstr ""
 
-msgid "Configure if and how the record indicator will be shown in the channel selection list."
+msgid "Configure if and how the record indicator will be shown in the channel selection list (left alignment only available in single line mode)."
 msgstr ""
 
 msgid "Configure if and how wide columns will be shown in the channel selection list."
@@ -2704,6 +2705,9 @@ msgstr ""
 msgid "Delay in miliseconds between scrolling characters on display."
 msgstr ""
 
+msgid "Delay when closing a stream relay service before reallocating the tuner for another service. Using '0' is only recommended for boxes with multiple satellite tuners."
+msgstr ""
+
 msgid "Delete"
 msgstr "Sterge"
 
@@ -3309,6 +3313,12 @@ msgstr ""
 
 #, python-format
 msgid "Enable auto fastscan for %s"
+msgstr ""
+
+msgid "Enable blink functionality for some areas like record icon."
+msgstr ""
+
+msgid "Enable blinking"
 msgstr ""
 
 #, fuzzy
@@ -5168,6 +5178,9 @@ msgstr ""
 msgid "MB"
 msgstr "B"
 
+msgid "MENU"
+msgstr ""
+
 msgid "MHz"
 msgstr ""
 
@@ -6138,7 +6151,13 @@ msgstr ""
 msgid "PPanel"
 msgstr ""
 
+msgid "PREVIOUS"
+msgstr ""
+
 msgid "PULSe 4K(mini)"
+msgstr ""
+
+msgid "PVR"
 msgstr ""
 
 msgid "Package list update"
@@ -6901,6 +6920,9 @@ msgid "Python frontend for /tmp/mmi.socket"
 msgstr "Python frontend pentru /tmp/mni.socket"
 
 msgid "Python version: "
+msgstr ""
+
+msgid "Pythonscript"
 msgstr ""
 
 msgid "Qatar"
@@ -8135,6 +8157,10 @@ msgstr ""
 msgid "Service info - tuner setting values"
 msgstr ""
 
+#, fuzzy
+msgid "Service info font size"
+msgstr "Info serviciu"
+
 msgid ""
 "Service invalid!\n"
 "(Timeout reading PMT)"
@@ -8146,12 +8172,20 @@ msgstr ""
 msgid "Service name"
 msgstr "Scanare Serviciu"
 
+#, fuzzy
+msgid "Service name font size"
+msgstr "Scanare Serviciu"
+
 msgid ""
 "Service not found!\n"
 "(SID not found in PAT)"
 msgstr ""
 "Serviciul nu a fost gasit!\n"
 "(SID nu a fost gasit in PAT)"
+
+#, fuzzy
+msgid "Service number font size"
+msgstr "Subtitrari"
 
 msgid "Service reference"
 msgstr ""
@@ -8246,7 +8280,7 @@ msgstr ""
 msgid "Set the port of the OpenWebif from your fallback tuner"
 msgstr ""
 
-msgid "Set the type of the progress indication in the channel selection screen."
+msgid "Set the type of the progress indication in the channel selection screen (right alignment only available in single line mode)."
 msgstr ""
 
 msgid "Set time window to 1 hour"
@@ -8385,6 +8419,9 @@ msgid "Show crypto info in infobar"
 msgstr ""
 
 msgid "Show detailed event info"
+msgstr ""
+
+msgid "Show disabled timers (local only)"
 msgstr ""
 
 #, fuzzy
@@ -8640,10 +8677,6 @@ msgstr "Individual"
 
 msgid "Single EPG"
 msgstr "EPG Individual"
-
-#, fuzzy
-msgid "Single line mode"
-msgstr "Selectati modul vieo"
 
 msgid "Single satellite"
 msgstr "Satelit individual"
@@ -9131,6 +9164,9 @@ msgid "Stored position"
 msgstr "Pozitie memorata"
 
 msgid "Stream"
+msgstr ""
+
+msgid "Stream Relay delay"
 msgstr ""
 
 msgid "Stream request"
@@ -9637,6 +9673,9 @@ msgstr ""
 
 msgid "This DVD RW medium is already formatted - reformatting will erase all content on the disc."
 msgstr "Acest DVD RW este deja formatat - reformatarea presupune stergerea tuturorfisierelor de pe disc."
+
+msgid "This allows you to change the font size relative to skin size, so 1 increases by 1 point size, and -1 decreases by 1 point size"
+msgstr ""
 
 msgid "This bouquet is protected by a parental control PIN"
 msgstr ""
@@ -10194,14 +10233,6 @@ msgstr ""
 msgid "Two"
 msgstr "Doi"
 
-#, fuzzy
-msgid "Two lines"
-msgstr "arata Infoline"
-
-#, fuzzy
-msgid "Two lines and next event"
-msgstr "muta jos la urmatoarea intrare"
-
 msgid "Type"
 msgstr "Tip"
 
@@ -10459,6 +10490,10 @@ msgstr ""
 
 msgid "Use power measurement"
 msgstr "Foloseste Masurarea Energiei"
+
+#, fuzzy
+msgid "Use skin default"
+msgstr "listeaza stilul default"
 
 #, fuzzy
 msgid "Use the network wizard to configure selected network adapter"
@@ -11956,6 +11991,10 @@ msgstr ""
 msgid "menu"
 msgstr "meniu"
 
+#, fuzzy
+msgid "min"
+msgstr "min"
+
 msgid "mins"
 msgstr "min"
 
@@ -12395,6 +12434,14 @@ msgid "true"
 msgstr ""
 
 #, fuzzy
+msgid "two lines"
+msgstr "arata Infoline"
+
+#, fuzzy
+msgid "two lines+next event"
+msgstr "muta jos la urmatoarea intrare"
+
+#, fuzzy
 msgid "type"
 msgstr "Tipul de test"
 
@@ -12529,4 +12576,10 @@ msgid "zapped"
 msgstr "zapped"
 
 msgid "®"
+msgstr ""
+
+msgid "°E"
+msgstr ""
+
+msgid "°W"
 msgstr ""
