--- a/po/sl.po
+++ b/po/sl.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Project Slovenia\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-11-08 16:10+0100\n"
+"POT-Creation-Date: 2023-12-16 09:57+0100\n"
 "PO-Revision-Date: 2020-05-16 18:48+0200\n"
 "Last-Translator: Taykun345 <support@satnigmo.com>\n"
 "Language-Team: Satnigmo <support@satnigmo.com>\n"
@@ -183,6 +183,10 @@ msgstr "%a %e/%m"
 #. TRANSLATORS: long date representation short dayname daynum short monthname hour:minute in strftime() format! See 'man strftime'
 msgid "%a %e/%m  %-H:%M"
 msgstr "%a %e/%m  %-H:%M"
+
+#, python-format
+msgid "%d"
+msgstr ""
 
 #, python-format
 msgid "%d MB"
@@ -1216,9 +1220,6 @@ msgid "Arts/Culture (without music)"
 msgstr ""
 
 msgid "Aruba"
-msgstr ""
-
-msgid "As defined by the skin"
 msgstr ""
 
 #
@@ -2267,16 +2268,19 @@ msgstr "Nastavitev omogoča, da določite, kako je sestavljeno ime posnetkov."
 msgid "Configure how the fan should operate"
 msgstr "Nastavitev načina delovanja ventilatorja"
 
-msgid "Configure if and how crypto icons will be shown in the channel selection list."
+#, fuzzy
+msgid "Configure if and how crypto icons will be shown in the channel selection list (left alignment only available in single line mode)."
 msgstr "Določitev morebitnega prikaza in na kakšen način naj se prikazujejo kripto ikone v seznamu kanalov."
 
 msgid "Configure if and how long the latest service in Picture in Picture mode will be remembered."
 msgstr "Določitev vklopa nastavitve in kako dolgo naj si sprejemnik zapomni zadnji gledani kanal v načinu \"Slika v sliki\"."
 
-msgid "Configure if and how service type icons will be shown in the channel selection list."
+#, fuzzy
+msgid "Configure if and how service type icons will be shown in the channel selection list (left alignment only available in single line mode)."
 msgstr "Določitev morebitnega prikaza ter načina prikaza ikon, ki prikazujejo vrsto kanala (kabel, antena, satelit) v seznamu kanalov."
 
-msgid "Configure if and how the record indicator will be shown in the channel selection list."
+#, fuzzy
+msgid "Configure if and how the record indicator will be shown in the channel selection list (left alignment only available in single line mode)."
 msgstr "Določitev morebitnega prikaza indikatorja snemanja v seznamu kanalov."
 
 msgid "Configure if and how wide columns will be shown in the channel selection list."
@@ -3040,6 +3044,9 @@ msgstr ""
 msgid "Delay in miliseconds between scrolling characters on display."
 msgstr ""
 
+msgid "Delay when closing a stream relay service before reallocating the tuner for another service. Using '0' is only recommended for boxes with multiple satellite tuners."
+msgstr ""
+
 #
 msgid "Delete"
 msgstr "Izbris"
@@ -3761,6 +3768,14 @@ msgstr "Omogoči samodejno hitro iskanje"
 #, fuzzy, python-format
 msgid "Enable auto fastscan for %s"
 msgstr "Omogoči samodejno hitro iskanje"
+
+msgid "Enable blink functionality for some areas like record icon."
+msgstr ""
+
+#
+#, fuzzy
+msgid "Enable blinking"
+msgstr "Virgin EPG sistem"
 
 #
 #, fuzzy
@@ -5830,6 +5845,9 @@ msgstr ""
 msgid "MB"
 msgstr "B"
 
+msgid "MENU"
+msgstr ""
+
 msgid "MHz"
 msgstr ""
 
@@ -6916,7 +6934,13 @@ msgstr "PMT PID"
 msgid "PPanel"
 msgstr "PPanel"
 
+msgid "PREVIOUS"
+msgstr ""
+
 msgid "PULSe 4K(mini)"
+msgstr ""
+
+msgid "PVR"
 msgstr ""
 
 #
@@ -7808,6 +7832,9 @@ msgstr ""
 
 msgid "Python version: "
 msgstr "Verzija pythona:"
+
+msgid "Pythonscript"
+msgstr ""
 
 msgid "Qatar"
 msgstr ""
@@ -9224,6 +9251,11 @@ msgid "Service info - tuner setting values"
 msgstr ""
 
 #
+#, fuzzy
+msgid "Service info font size"
+msgstr "Info. o kanalu"
+
+#
 msgid ""
 "Service invalid!\n"
 "(Timeout reading PMT)"
@@ -9234,6 +9266,10 @@ msgstr ""
 msgid "Service name"
 msgstr "Ime kanala"
 
+#, fuzzy
+msgid "Service name font size"
+msgstr "Ime kanala"
+
 #
 msgid ""
 "Service not found!\n"
@@ -9241,6 +9277,11 @@ msgid ""
 msgstr ""
 "Kanala ni moč najti!\n"
 "(SID ni v PAT)"
+
+#
+#, fuzzy
+msgid "Service number font size"
+msgstr "Velikost podnapisov"
 
 msgid "Service reference"
 msgstr "Ident. številka"
@@ -9346,7 +9387,8 @@ msgid "Set the port of the OpenWebif from your fallback tuner"
 msgstr ""
 
 #
-msgid "Set the type of the progress indication in the channel selection screen."
+#, fuzzy
+msgid "Set the type of the progress indication in the channel selection screen (right alignment only available in single line mode)."
 msgstr "Grafični prikaz poteka TV kanala - v seznamu kanalov"
 
 msgid "Set time window to 1 hour"
@@ -9498,6 +9540,9 @@ msgstr "Prikaz kodiranja kanala v informacijski vrstici"
 
 msgid "Show detailed event info"
 msgstr "Prikaz podrobnih informacij o dogodku"
+
+msgid "Show disabled timers (local only)"
+msgstr ""
 
 #
 msgid "Show event details"
@@ -9785,11 +9830,6 @@ msgstr "Posamezen"
 #
 msgid "Single EPG"
 msgstr "Enostavni EPG"
-
-#
-#, fuzzy
-msgid "Single line mode"
-msgstr "Izberite video način"
 
 #
 msgid "Single satellite"
@@ -10337,6 +10377,9 @@ msgstr "Shranjeni položaj"
 
 msgid "Stream"
 msgstr "Pretok"
+
+msgid "Stream Relay delay"
+msgstr ""
 
 msgid "Stream request"
 msgstr "Zahtevek za pričetek pretakanja"
@@ -10898,6 +10941,9 @@ msgstr ""
 #
 msgid "This DVD RW medium is already formatted - reformatting will erase all content on the disc."
 msgstr "DVD RW medij je že formatiran-ponovno formatiranje bo izbrisalo vso vsebino na mediju!"
+
+msgid "This allows you to change the font size relative to skin size, so 1 increases by 1 point size, and -1 decreases by 1 point size"
+msgstr ""
 
 msgid "This bouquet is protected by a parental control PIN"
 msgstr "Ta seznam kanalov je zaščiten s PIN kodo"
@@ -11519,16 +11565,6 @@ msgid "Two"
 msgstr "Dva"
 
 #
-#, fuzzy
-msgid "Two lines"
-msgstr "Prikaz info. vrstice"
-
-#
-#, fuzzy
-msgid "Two lines and next event"
-msgstr "Pojdi na naslednji dogodek"
-
-#
 msgid "Type"
 msgstr "Vrsta"
 
@@ -11813,6 +11849,11 @@ msgstr "Izvirni položaj teletekst podnapisov"
 #
 msgid "Use power measurement"
 msgstr "Uporaba merjenja moči"
+
+#
+#, fuzzy
+msgid "Use skin default"
+msgstr "Nastavi kot privzeto"
 
 #
 msgid "Use the network wizard to configure selected network adapter"
@@ -13515,6 +13556,11 @@ msgid "menu"
 msgstr "meni"
 
 #
+#, fuzzy
+msgid "min"
+msgstr "%d min"
+
+#
 msgid "mins"
 msgstr "mins"
 
@@ -14017,6 +14063,16 @@ msgstr ""
 msgid "true"
 msgstr "pravilno"
 
+#
+#, fuzzy
+msgid "two lines"
+msgstr "Prikaz info. vrstice"
+
+#
+#, fuzzy
+msgid "two lines+next event"
+msgstr "Pojdi na naslednji dogodek"
+
 #, fuzzy
 msgid "type"
 msgstr "Tip seznama"
@@ -14173,3 +14229,9 @@ msgstr "preklopljeno"
 
 msgid "®"
 msgstr "®"
+
+msgid "°E"
+msgstr ""
+
+msgid "°W"
+msgstr ""
