--- a/po/sr.po
+++ b/po/sr.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-11-08 16:10+0100\n"
+"POT-Creation-Date: 2023-12-16 09:57+0100\n"
 "PO-Revision-Date: 2011-04-14 00:02+0200\n"
 "Last-Translator: majevica <jovanovic@gmx.ch>\n"
 "Language-Team: veselin & majevica CRNABERZA <jovanovic@gmx.ch>\n"
@@ -181,6 +181,10 @@ msgstr ""
 
 #. TRANSLATORS: long date representation short dayname daynum short monthname hour:minute in strftime() format! See 'man strftime'
 msgid "%a %e/%m  %-H:%M"
+msgstr ""
+
+#, python-format
+msgid "%d"
 msgstr ""
 
 #, python-format
@@ -1205,9 +1209,6 @@ msgid "Arts/Culture (without music)"
 msgstr ""
 
 msgid "Aruba"
-msgstr ""
-
-msgid "As defined by the skin"
 msgstr ""
 
 #
@@ -2259,16 +2260,16 @@ msgstr ""
 msgid "Configure how the fan should operate"
 msgstr ""
 
-msgid "Configure if and how crypto icons will be shown in the channel selection list."
+msgid "Configure if and how crypto icons will be shown in the channel selection list (left alignment only available in single line mode)."
 msgstr ""
 
 msgid "Configure if and how long the latest service in Picture in Picture mode will be remembered."
 msgstr ""
 
-msgid "Configure if and how service type icons will be shown in the channel selection list."
+msgid "Configure if and how service type icons will be shown in the channel selection list (left alignment only available in single line mode)."
 msgstr ""
 
-msgid "Configure if and how the record indicator will be shown in the channel selection list."
+msgid "Configure if and how the record indicator will be shown in the channel selection list (left alignment only available in single line mode)."
 msgstr ""
 
 msgid "Configure if and how wide columns will be shown in the channel selection list."
@@ -3050,6 +3051,9 @@ msgstr ""
 msgid "Delay in miliseconds between scrolling characters on display."
 msgstr ""
 
+msgid "Delay when closing a stream relay service before reallocating the tuner for another service. Using '0' is only recommended for boxes with multiple satellite tuners."
+msgstr ""
+
 #
 msgid "Delete"
 msgstr "Obriši"
@@ -3751,6 +3755,12 @@ msgstr ""
 
 #, python-format
 msgid "Enable auto fastscan for %s"
+msgstr ""
+
+msgid "Enable blink functionality for some areas like record icon."
+msgstr ""
+
+msgid "Enable blinking"
 msgstr ""
 
 #
@@ -5838,6 +5848,9 @@ msgstr ""
 msgid "MB"
 msgstr "B"
 
+msgid "MENU"
+msgstr ""
+
 msgid "MHz"
 msgstr ""
 
@@ -6942,7 +6955,13 @@ msgstr "PMT PID"
 msgid "PPanel"
 msgstr ""
 
+msgid "PREVIOUS"
+msgstr ""
+
 msgid "PULSe 4K(mini)"
+msgstr ""
+
+msgid "PVR"
 msgstr ""
 
 #
@@ -7832,6 +7851,9 @@ msgid "Python frontend for /tmp/mmi.socket"
 msgstr "Čeoni python za /tmp/mmi.socket"
 
 msgid "Python version: "
+msgstr ""
+
+msgid "Pythonscript"
 msgstr ""
 
 msgid "Qatar"
@@ -9249,6 +9271,11 @@ msgid "Service info - tuner setting values"
 msgstr ""
 
 #
+#, fuzzy
+msgid "Service info font size"
+msgstr "Info kanala"
+
+#
 msgid ""
 "Service invalid!\n"
 "(Timeout reading PMT)"
@@ -9262,12 +9289,22 @@ msgid "Service name"
 msgstr "Skeniranje Kanala"
 
 #
+#, fuzzy
+msgid "Service name font size"
+msgstr "Skeniranje Kanala"
+
+#
 msgid ""
 "Service not found!\n"
 "(SID not found in PAT)"
 msgstr ""
 "Kanal nije pronađen!\n"
 "(SID nije pronađen u PAT)"
+
+#
+#, fuzzy
+msgid "Service number font size"
+msgstr "Subtitlovi"
 
 msgid "Service reference"
 msgstr "Kanal referenca"
@@ -9373,7 +9410,7 @@ msgstr ""
 
 #
 #, fuzzy
-msgid "Set the type of the progress indication in the channel selection screen."
+msgid "Set the type of the progress indication in the channel selection screen (right alignment only available in single line mode)."
 msgstr "Pokaži napredak događaja u izboru kanala"
 
 msgid "Set time window to 1 hour"
@@ -9525,6 +9562,9 @@ msgid "Show crypto info in infobar"
 msgstr ""
 
 msgid "Show detailed event info"
+msgstr ""
+
+msgid "Show disabled timers (local only)"
 msgstr ""
 
 #
@@ -9812,11 +9852,6 @@ msgstr "Jedan"
 #
 msgid "Single EPG"
 msgstr "Jedan EPG"
-
-#
-#, fuzzy
-msgid "Single line mode"
-msgstr "Izaberi video mod"
 
 #
 msgid "Single satellite"
@@ -10373,6 +10408,9 @@ msgid "Stored position"
 msgstr "Snimljene pozicije"
 
 msgid "Stream"
+msgstr ""
+
+msgid "Stream Relay delay"
 msgstr ""
 
 msgid "Stream request"
@@ -10952,6 +10990,9 @@ msgstr ""
 #
 msgid "This DVD RW medium is already formatted - reformatting will erase all content on the disc."
 msgstr "Ovaj DVD RW medij je već formatiran-ponovno formatiranje će izbrisati ceo sadržaj diska."
+
+msgid "This allows you to change the font size relative to skin size, so 1 increases by 1 point size, and -1 decreases by 1 point size"
+msgstr ""
 
 msgid "This bouquet is protected by a parental control PIN"
 msgstr ""
@@ -11578,16 +11619,6 @@ msgid "Two"
 msgstr "Dva"
 
 #
-#, fuzzy
-msgid "Two lines"
-msgstr "Pokaži Info liniju "
-
-#
-#, fuzzy
-msgid "Two lines and next event"
-msgstr "Pomeri dole na naredni unos"
-
-#
 msgid "Type"
 msgstr "Tip"
 
@@ -11869,6 +11900,11 @@ msgstr ""
 #
 msgid "Use power measurement"
 msgstr "Koristi merenje snage"
+
+#
+#, fuzzy
+msgid "Use skin default"
+msgstr "standardne postavke stila liste"
 
 #
 #, fuzzy
@@ -13547,6 +13583,11 @@ msgid "menu"
 msgstr "meni"
 
 #
+#, fuzzy
+msgid "min"
+msgstr "%d min"
+
+#
 msgid "mins"
 msgstr "mins"
 
@@ -14045,6 +14086,16 @@ msgstr ""
 
 #
 #, fuzzy
+msgid "two lines"
+msgstr "Pokaži Info liniju "
+
+#
+#, fuzzy
+msgid "two lines+next event"
+msgstr "Pomeri dole na naredni unos"
+
+#
+#, fuzzy
 msgid "type"
 msgstr "Testiraj tip"
 
@@ -14198,4 +14249,10 @@ msgid "zapped"
 msgstr "prebačen"
 
 msgid "®"
+msgstr ""
+
+msgid "°E"
+msgstr ""
+
+msgid "°W"
 msgstr ""
