--- a/po/tr.po
+++ b/po/tr.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: OPENPLi\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-11-08 16:10+0100\n"
+"POT-Creation-Date: 2023-12-16 09:57+0100\n"
 "PO-Revision-Date: 2015-12-18 21:05+0200\n"
 "Last-Translator: Yetkin AYDIN <yetkina@gmail.com>\n"
 "Language-Team: http://www.hurforum.com <yetkina@gmail.com>\n"
@@ -178,6 +178,10 @@ msgstr "%a %e/%m"
 #. TRANSLATORS: long date representation short dayname daynum short monthname hour:minute in strftime() format! See 'man strftime'
 msgid "%a %e/%m  %-H:%M"
 msgstr "%a %e/%m  %-H:%M"
+
+#, python-format
+msgid "%d"
+msgstr ""
 
 #, python-format
 msgid "%d MB"
@@ -1046,9 +1050,6 @@ msgid "Arts/Culture (without music)"
 msgstr "Sanat/Kültür (Müziksiz, Genel)"
 
 msgid "Aruba"
-msgstr ""
-
-msgid "As defined by the skin"
 msgstr ""
 
 msgid "Ask user"
@@ -1971,16 +1972,19 @@ msgstr "Kayıt dosyaları nasıl isimlerdirilmeli"
 msgid "Configure how the fan should operate"
 msgstr "Fanın nasıl çalışması gerektiğini yapılandırın"
 
-msgid "Configure if and how crypto icons will be shown in the channel selection list."
+#, fuzzy
+msgid "Configure if and how crypto icons will be shown in the channel selection list (left alignment only available in single line mode)."
 msgstr "Şİfreli Kanal simgesinin kanal listesinde görünme şekli"
 
 msgid "Configure if and how long the latest service in Picture in Picture mode will be remembered."
 msgstr "En son uzun süre bakılan RiR servisini hatırlama ayarı. "
 
-msgid "Configure if and how service type icons will be shown in the channel selection list."
+#, fuzzy
+msgid "Configure if and how service type icons will be shown in the channel selection list (left alignment only available in single line mode)."
 msgstr "Hizmet türü simgelerinin Kanal seçim listesinde nasıl gösterileceğini yapılandırın."
 
-msgid "Configure if and how the record indicator will be shown in the channel selection list."
+#, fuzzy
+msgid "Configure if and how the record indicator will be shown in the channel selection list (left alignment only available in single line mode)."
 msgstr "Kanal seçim listesinde kayıt göstergesinin nasıl görüneceğini yapılandırın."
 
 msgid "Configure if and how wide columns will be shown in the channel selection list."
@@ -2677,6 +2681,9 @@ msgstr "Ekranda yazı kaydırken, geçiş/bekleme zamanını milisaniye..."
 msgid "Delay in miliseconds between scrolling characters on display."
 msgstr "Ekranda yazı kaydırken, geçiş/bekleme zamanını milisaniye..."
 
+msgid "Delay when closing a stream relay service before reallocating the tuner for another service. Using '0' is only recommended for boxes with multiple satellite tuners."
+msgstr ""
+
 msgid "Delete"
 msgstr "Sil"
 
@@ -3284,6 +3291,13 @@ msgstr "Otomatik hızlı taramayı etkinleştir"
 #, fuzzy, python-format
 msgid "Enable auto fastscan for %s"
 msgstr "Otomatik hızlı taramayı etkinleştir"
+
+msgid "Enable blink functionality for some areas like record icon."
+msgstr ""
+
+#, fuzzy
+msgid "Enable blinking"
+msgstr "Virgin EPG Aktif"
 
 #, fuzzy
 msgid "Enable bluetooth audio"
@@ -5122,6 +5136,9 @@ msgstr "Lüksemburgca"
 msgid "MB"
 msgstr "B"
 
+msgid "MENU"
+msgstr ""
+
 msgid "MHz"
 msgstr ""
 
@@ -6074,7 +6091,13 @@ msgstr "PMT PID"
 msgid "PPanel"
 msgstr "PPanel"
 
+msgid "PREVIOUS"
+msgstr ""
+
 msgid "PULSe 4K(mini)"
+msgstr ""
+
+msgid "PVR"
 msgstr ""
 
 msgid "Package list update"
@@ -6832,6 +6855,10 @@ msgstr "/tmp/mmi.socket için Python uç birimi"
 
 msgid "Python version: "
 msgstr "Python versiyonu: "
+
+#, fuzzy
+msgid "Pythonscript"
+msgstr "Komut Çalıştır (ShellScript)"
 
 msgid "Qatar"
 msgstr ""
@@ -8040,6 +8067,10 @@ msgstr ""
 msgid "Service info - tuner setting values"
 msgstr ""
 
+#, fuzzy
+msgid "Service info font size"
+msgstr "Kanal bilgisi"
+
 msgid ""
 "Service invalid!\n"
 "(Timeout reading PMT)"
@@ -8050,12 +8081,20 @@ msgstr ""
 msgid "Service name"
 msgstr "Kanal adı"
 
+#, fuzzy
+msgid "Service name font size"
+msgstr "Kanal adı"
+
 msgid ""
 "Service not found!\n"
 "(SID not found in PAT)"
 msgstr ""
 "Kanal bulunamadı!\n"
 "(SID, PAT içerisinde bulunamadı)"
+
+#, fuzzy
+msgid "Service number font size"
+msgstr "Altyazı Yazı Tipi Boyutu"
 
 msgid "Service reference"
 msgstr "Kanal referansı"
@@ -8148,7 +8187,8 @@ msgstr ""
 msgid "Set the port of the OpenWebif from your fallback tuner"
 msgstr ""
 
-msgid "Set the type of the progress indication in the channel selection screen."
+#, fuzzy
+msgid "Set the type of the progress indication in the channel selection screen (right alignment only available in single line mode)."
 msgstr "Kanal seçimi ekranında ilerleme göstergesi türünü ayarlayın."
 
 msgid "Set time window to 1 hour"
@@ -8281,6 +8321,9 @@ msgstr "Bilgi çubuğunda şifreleme bilgisi göster."
 
 msgid "Show detailed event info"
 msgstr "Ayrıntılı olay bilgisi göster"
+
+msgid "Show disabled timers (local only)"
+msgstr ""
 
 msgid "Show event details"
 msgstr "Olay ayrıntılarını göster"
@@ -8532,10 +8575,6 @@ msgstr "Tek"
 
 msgid "Single EPG"
 msgstr "Tekli EPG"
-
-#, fuzzy
-msgid "Single line mode"
-msgstr "Video modu seç"
 
 msgid "Single satellite"
 msgstr "Tek uydu"
@@ -9007,6 +9046,10 @@ msgstr "Kaydedilen pozisyonlar"
 
 msgid "Stream"
 msgstr "Akış"
+
+#, fuzzy
+msgid "Stream Relay delay"
+msgstr "Kaydırma gecikme"
 
 msgid "Stream request"
 msgstr "Akış isteği"
@@ -9513,6 +9556,9 @@ msgstr ""
 
 msgid "This DVD RW medium is already formatted - reformatting will erase all content on the disc."
 msgstr "DVD-RW medyası zaten biçimlendirilmiş - yeniden biçimlendirme tüm disk içeriğini silecektir."
+
+msgid "This allows you to change the font size relative to skin size, so 1 increases by 1 point size, and -1 decreases by 1 point size"
+msgstr ""
 
 msgid "This bouquet is protected by a parental control PIN"
 msgstr "Bu buket Aile Koruma Şifresi ile Kilitlenmiş"
@@ -10078,14 +10124,6 @@ msgstr ""
 msgid "Two"
 msgstr "İki"
 
-#, fuzzy
-msgid "Two lines"
-msgstr "Bilgi satırı göster"
-
-#, fuzzy
-msgid "Two lines and next event"
-msgstr "Sonraki olaya git"
-
 msgid "Type"
 msgstr "Tip"
 
@@ -10347,6 +10385,10 @@ msgstr "Orijinal teletext konumunu kullan"
 
 msgid "Use power measurement"
 msgstr "Güç kullanımını ölç"
+
+#, fuzzy
+msgid "Use skin default"
+msgstr "Varsayılan olarak ayarla"
 
 msgid "Use the network wizard to configure selected network adapter"
 msgstr "Seçilen ağ bağdaştırıcısını yapılandırmak için ağ sihirbazını kullan"
@@ -11878,6 +11920,10 @@ msgstr "Tıp/Fizyoloji/Psikoloji"
 msgid "menu"
 msgstr "Menü"
 
+#, fuzzy
+msgid "min"
+msgstr "%d dk"
+
 msgid "mins"
 msgstr "Dakika"
 
@@ -12326,6 +12372,14 @@ msgid "true"
 msgstr "Doğru"
 
 #, fuzzy
+msgid "two lines"
+msgstr "Bilgi satırı göster"
+
+#, fuzzy
+msgid "two lines+next event"
+msgstr "Sonraki olaya git"
+
+#, fuzzy
 msgid "type"
 msgstr "Liste tipi"
 
@@ -12460,3 +12514,9 @@ msgstr "Kanal değiştirildi"
 
 msgid "®"
 msgstr "®"
+
+msgid "°E"
+msgstr ""
+
+msgid "°W"
+msgstr ""
